# django-inertia-vuejs

./: .env.example  .gitignore  README.md  django_inertia.md  docker-compose.yml  pyproject.toml
apps/: settings.py  urls.py
apps/core/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/Components/: ConfirmDialog.vue  MovieFormDialog.vue  MovieTable.vue  StatsBar.vue  Toast.vue
frontend/src/Pages/Movies/: Create.vue  Edit.vue  Index.vue
frontend/src/composables/: useModal.js
templates/: base.html
